[gd_scene load_steps=6 format=3 uid="uid://dic6t3g08dh4e"]

[ext_resource type="Script" path="res://GameRulesScene.gd" id="1_phn6n"]
[ext_resource type="PackedScene" uid="uid://c7qdk4crw0kvf" path="res://IntLineEdit.tscn" id="1_wh0lf"]
[ext_resource type="Texture2D" uid="uid://bkd703ivppc5y" path="res://MCMUnchecked.png" id="2_xmr2c"]
[ext_resource type="Script" path="res://Scenes/FalloutCheckboxMCM.gd" id="3_2cbb5"]
[ext_resource type="Texture2D" uid="uid://dsmek6qhvw8t6" path="res://MCMChecked.png" id="4_bnw7l"]

[node name="GameSettings" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.627
anchor_bottom = 0.336
offset_right = -722.304
offset_bottom = -217.728
size_flags_vertical = 3
script = ExtResource("1_phn6n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CaravanVBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CaravanMarginContainer" type="MarginContainer" parent="HBoxContainer/CaravanVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2

[node name="CaravanLabel" type="Label" parent="HBoxContainer/CaravanVBoxContainer/CaravanMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Caravan"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CaravanVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaxValueHBoxContainer" type="HBoxContainer" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum value to sell a caravan (inclusive)"

[node name="MaxValueLabel" type="Label" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxValueHBoxContainer"]
layout_mode = 2
text = "Max Value "

[node name="MaxValueLineEdit" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxValueHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Maximum value to sell a caravan (inclusive)"
text = "26"

[node name="MinValueHBoxContainer" type="HBoxContainer" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Minimum value to sell a caravan (inclusive)"

[node name="MinValueLabel" type="Label" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MinValueHBoxContainer"]
layout_mode = 2
text = "Min Value "

[node name="MinValueLineEdit" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MinValueHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Minimum value to sell a caravan (inclusive)"
text = "21"

[node name="MaxCardsHBoxContainer" type="HBoxContainer" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum number of numeric cards that can be played in a caravan"

[node name="MaxCardsLabel" type="Label" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxCardsHBoxContainer"]
layout_mode = 2
text = "Max Cards "

[node name="MaxCardsLineEdit" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxCardsHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Maximum number of numeric cards that can be played in a caravan"
text = "20"

[node name="HandSizeHBoxContainer" type="HBoxContainer" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Amount of cards kept in the hand"

[node name="HandSizeLabel" type="Label" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HandSizeHBoxContainer"]
layout_mode = 2
text = "Hand Size "

[node name="HandSizeLineEdit" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HandSizeHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Amount of cards kept in the hand (game starts with an additional card for each caravan)"
text = "5"

[node name="Control" type="Control" parent="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CardVBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="CardMarginContainer" type="MarginContainer" parent="HBoxContainer/CardVBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.1
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2

[node name="CardLabel" type="Label" parent="HBoxContainer/CardVBoxContainer/CardMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Card
"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CardVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QueenChangeSuitButton" type="Button" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Whether playing a queen changes the direction of the caravan it's played on."
theme_type_variation = &"ButtonCheckboxMCM"
toggle_mode = true
button_pressed = true
text = "Queen Changes Suit"
icon = ExtResource("4_bnw7l")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QueenChangeDirectionButton" type="Button" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Whether playing a queen changes the suit of its number card."
theme_type_variation = &"ButtonCheckboxMCM"
toggle_mode = true
button_pressed = true
text = "Queen Changes Direction"
icon = ExtResource("4_bnw7l")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FaceCardFirstRoundButton" type="Button" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
button_pressed = true
text = "Allow Face Card First Round"
icon = ExtResource("4_bnw7l")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FaceMatchSuitButton" type="Button" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonCheckboxMCM"
toggle_mode = true
text = "Require Face Card Match Suit"
icon = ExtResource("2_xmr2c")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="MaxFacesHBoxContainer" type="HBoxContainer" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum number of face cards, that can be played on a number card"

[node name="MaxFacesLabel" type="Label" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxFacesHBoxContainer"]
layout_mode = 2
text = "Number Card, Max Faces"

[node name="MaxFacesLineEdit" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxFacesHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Maximum number of face cards, that can be played on a number card"
text = "6"

[node name="Control" type="Control" parent="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DeckVBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckMarginContainer" type="MarginContainer" parent="HBoxContainer/DeckVBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer"]
layout_mode = 2

[node name="DeckLabel" type="Label" parent="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Deck"

[node name="Spacer2" type="Control" parent="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CustomizeDeckButton" type="Button" parent="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Shuffle deck before starting game"
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
text = " Customize"
icon = ExtResource("2_xmr2c")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="Spacer" type="Control" parent="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DeckVBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckMinCardsHBoxContainer" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Minimum starting number of cards allowed in the deck"

[node name="MinCardsLabel" type="Label" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMinCardsHBoxContainer"]
layout_mode = 2
text = "Min Cards "

[node name="DeckMinCardsLineEdit" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMinCardsHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Minimum starting number of cards allowed in the deck"
text = "30"

[node name="DeckMaxCardsHBoxContainer" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum starting number of cards allowed in the deck"

[node name="MaxCardsLabel" type="Label" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMaxCardsHBoxContainer"]
layout_mode = 2
text = "Max Cards "

[node name="DeckMaxCardsLineEdit" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMaxCardsHBoxContainer" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Maximum starting number of cards allowed in the deck"
text = "108"

[node name="ShuffleHBoxContainer" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Shuffle deck before starting game"

[node name="ShuffleButton" type="Button" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/ShuffleHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Shuffle deck before starting game"
theme_type_variation = &"ButtonCheckboxMCM"
toggle_mode = true
button_pressed = true
text = "Shuffle"
icon = ExtResource("4_bnw7l")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="UniqueCardsHBoxContainer2" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Prevent filling a deck of only: 10's, 6's and kings?"

[node name="UniqueCardsButton" type="Button" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/UniqueCardsHBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Prevent filling a deck of only: 10's, 6's and kings?"
theme_type_variation = &"ButtonCheckboxMCM"
disabled = true
toggle_mode = true
button_pressed = true
text = "Require Unique Cards"
icon = ExtResource("4_bnw7l")
alignment = 0
icon_alignment = 2
script = ExtResource("3_2cbb5")

[node name="DeckSeedCardsHBoxContainer2" type="HBoxContainer" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Seed for randomized deck, leave blank (or 0) for random"

[node name="DeckSeedLabel" type="Label" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckSeedCardsHBoxContainer2"]
layout_mode = 2
text = "Deck Seed "

[node name="DeckSeedLineEdit" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckSeedCardsHBoxContainer2" instance=ExtResource("1_wh0lf")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Seed for randomized deck, leave blank (or 0) for random"

[node name="Control" type="Control" parent="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxValueHBoxContainer/MaxValueLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MinValueHBoxContainer/MinValueLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxCardsHBoxContainer/MaxCardsLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/CaravanVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HandSizeHBoxContainer/HandSizeLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/QueenChangeSuitButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/QueenChangeDirectionButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/FaceCardFirstRoundButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4/FaceMatchSuitButton" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="HBoxContainer/CardVBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/MaxFacesHBoxContainer/MaxFacesLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer/HBoxContainer/CustomizeDeckButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeckVBoxContainer3/DeckMarginContainer/HBoxContainer/CustomizeDeckButton" to="." method="_on_customize_deck_button_pressed"]
[connection signal="text_changed" from="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMinCardsHBoxContainer/DeckMinCardsLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckMaxCardsHBoxContainer/DeckMaxCardsLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/ShuffleHBoxContainer/ShuffleButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/UniqueCardsHBoxContainer2/UniqueCardsButton" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="HBoxContainer/DeckVBoxContainer3/MarginContainer/HBoxContainer/VBoxContainer/DeckSeedCardsHBoxContainer2/DeckSeedLineEdit" to="." method="_on_line_edit_text_changed"]
